# vr

./: CMakeLists.txt
.cache/clangd/index/: _fixes.hpp.A4555F71709DAF1B.idx  _vectorize.hpp.C9CF23C85D114263.idx  application.cpp.156A3D5BA828920C.idx  application.hpp.696DBAB4D72DE75A.idx  application.hpp.8CE2482774325E07.idx  batchRenderer.cpp.40E6FF78308F36B9.idx  common.hpp.ECE183DD065989F5.idx  compute_common.hpp.712FBB355897B1CB.idx  compute_vector_decl.hpp.F0718CD0493322E5.idx  compute_vector_relational.hpp.ECE710B233ED8976.idx  constants.hpp.6B3CE26B75EA8A2F.idx  constants.inl.09082BD2CD6684A0.idx  context.c.23181006F96A12D5.idx  context.c.EF8F7A3BA61824F7.idx  cube.cpp.CF09481C3F6EDF93.idx  cube.hpp.25B582D3FE87656C.idx  egl_context.c.522C4F9CD676A4C9.idx  egl_context.c.B26CFB6165B93EF6.idx  exponential.hpp.80D151DFD3B1CA58.idx  func_common.inl.A8DB09E09A157D6F.idx  func_exponential.inl.1C774AD865BF74D4.idx  func_geometric.inl.089F3790DA2CA722.idx  func_matrix.inl.750A915F29AB608A.idx  func_trigonometric.inl.1E6D7EA85A7ECBC9.idx  geometric.hpp.01F70A4D3DF103E4.idx  (+226 more)
include/core/: application.hpp
include/handler/: glfwHandler.hpp  program.hpp
include/physics/: rigidbody.hpp
include/rendering/: batchRenderer.hpp  cube.hpp  renderer.hpp  shapes.hpp
include/scene/: entity.hpp
include/utility/: parser.hpp  shader.hpp  uniform.hpp
src/handler/: glfwHandler.cpp  program.cpp
src/rendering/: cube.cpp  renderer.cpp
src/utility/: parser.cpp  shader.cpp  uniform.cpp
testbed/: main.cpp  testbed.cpp  testbed.hpp
testbed/glsl/: frag.glsl  vertex.glsl
